--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -5,7 +5,6 @@
  */
 
 body {
-  padding-top: 54px;
   box-sizing:border-box;
   font-family:Helvetica;
 }
@@ -14,6 +13,16 @@ body {
   border:none;
   color:white;
   border-radius:10px;
+}
+.custom-toggler.navbar-toggler {
+  border-color: rgba(255,255,255, 0);
+}
+.custom-toggler .navbar-toggler-icon {
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+.navbar {
+  background-color:transparent !important;
+  border-bottom:1px solid white;
 }
 .button-cv:hover{
   background-color:#009688;
