--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -8,6 +8,17 @@ body {
   box-sizing:border-box;
   font-family:Helvetica;
 }
+
+#loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 32px;
+  height: 32px;
+  /* 1/2 of the height and width of the actual gif */
+  margin: -16px 0 0 -16px;
+  z-index: 100;
+  }
 .button-cv {
   background-color:#fff;
   border:none;
