--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -9,16 +9,6 @@ body {
   font-family:Helvetica;
 }
 
-#loading {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 32px;
-  height: 32px;
-  /* 1/2 of the height and width of the actual gif */
-  margin: -16px 0 0 -16px;
-  z-index: 100;
-  }
 .button-cv {
   background-color:#fff;
   border:none;
@@ -48,6 +38,10 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 
 
 /* NAV BAR */
+.card {
+  border:none;
+  box-shadow:2px 3px 15px -8px;
+}
 .navbar {
   background-color:transparent !important;
   border-bottom:1px solid white;
