Animation college finished

--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -8,7 +8,9 @@ body {
   box-sizing:border-box;
   font-family:Helvetica;
 }
-
+.card-img-top {
+  border-radius:25px;
+}
 .button-cv {
   background-color:#fff;
   border:none;
