--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -82,14 +82,28 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
-.jumbotron {
-  /*background:url("http://t.wallpaperweb.org/wallpaper/abstract/1920x1080/dyedmadness1920x1080wallpaper1361.jpg");*/
-  background-color:white;
+#div-greeting {
   background-size:cover;
   background-position:center;
+  background-color:black;
+  opacity:0.8;
+}
+#overlay {
+  background:url("https://images.pexels.com/photos/16516/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  opacity:1;
+  filter:alpha(opacity=20);
+  width:100%;
+}
+
+.jumbotron {
+  background:url("../img/test.png");
+  background-color:white;
+  background-size:contain;
+  background-position:center;
   border-radius:0;
-  height:100vh;
+  height:90vh;
+  margin-bottom:0;
+  padding:0;
 }
 .cv-jumbotron {
   background:url("http://imgs.abduzeedo.com/files/wallpapers/wpw338/wp_2880.jpg");
