Fixed some layouts

--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -40,7 +40,7 @@ body {
   color:#333;
   border:none;
 }
-
+/* 
 .custom-toggler.navbar-toggler {
   border-color: rgba(255,255,255, 0);
 }
@@ -53,7 +53,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 }
 .custom-toggler-light .navbar-toggler-icon {
 background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
+} */
 
 
 /* NAV BAR */
@@ -320,3 +320,83 @@ width:100% !important;
   -webkit-animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
   animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
 }
+
+.card {
+  margin: 0 auto;
+}
+.card .carousel-item {
+  height: 200px;
+}
+.card .carousel-caption {
+  padding: 0;
+  right: 0;
+  left: 0;
+  color: #3d3d3d;
+}
+.card .carousel-caption h3 {
+  color: #3d3d3d;
+}
+.card .carousel-caption p {
+  line-height: 30px;
+}
+.card .carousel-caption .col-sm-3 {
+  display: flex;
+  align-items: center;
+}
+.card .carousel-caption .col-sm-9 {
+  text-align: left;
+}
+.navi a {
+    text-decoration:none;
+}
+a > .ico {
+    background-color: grey;
+    padding: 10px;
+    
+}
+a:hover > .ico {
+    background-color: #666;
+}
+.btn-sos {
+  display:none;
+}
+
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 660px) {
+    .text-container h1 {
+        font-size:2.2rem;
+    }
+    .text-container {
+      width:90%;
+    }
+    .btn-group {
+      display:none !important;
+    }
+}
+
+
+@media only screen and (max-width: 800px) {
+    .text-container h1 {
+        font-size:2.2rem;
+    }
+    .btn-sos {
+      display:block;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .text-container h1 {
+        font-size:1.6rem;
+        font-weight:500;
+    }
+    .text-container p {
+      font-size:1.2rem;
+      padding:0;
+      margin:0;
+    }
+    .text-container img {
+      width:100px !important;
+    }
+}
+/* MEDIA QUERIES */
