--- a/ChesterTourist Simple Grid/css/main.css
+++ b/ChesterTourist Simple Grid/css/main.css
@@ -117,6 +117,12 @@ color:white;
 background-color:black;
 padding:14px
 }
+.col-icon {
+  width:33%;
+  float:left;
+  text-align:center;
+  font-size:50px;
+}
 #logo {
   float:right;
   color:white;
@@ -141,11 +147,42 @@ i:hover {
 h5 {
   padding:20px;
 }
+.contact-paragraph {
+  width:81%;
+  padding-bottom:50px;
+}
 .cloud-form {
+  clear:both;
   padding-top:50px;
   margin-top:30px;
   background-image:url("https://images.pexels.com/photos/158827/field-corn-air-frisch-158827.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   padding:20px;
+}
+.btn-contact {
+  padding:10px 40px 10px 40px;
+  font-size:15px;
+  border:none;
+  background-color:#333;
+  color:white;
+}
+.btn-contact:hover {
+  background-color:#555;
+  cursor:pointer;
+}
+input[type="submit"] {
+  cursor:pointer;
+}
+.contact-form {
+  clear:both;
+  padding-top:50px;
+  margin-top:30px;
+  padding:20px;
+}
+.col-icon a {
+  text-decoration: none;
+}
+.icon-container {
+  margin-bottom:200px;
 }
 .placeholder {
   min-height:250px;
@@ -153,6 +190,7 @@ h5 {
   background-image:url("https://images.pexels.com/photos/274192/pexels-photo-274192.jpeg?auto=compress&cs=tinysrgb&h=350");
   position:relative;
 }
+
 .architecture {
   background-image:url("https://images.pexels.com/photos/532580/pexels-photo-532580.jpeg?auto=compress&cs=tinysrgb&h=350");
 }
@@ -184,9 +222,15 @@ h5 {
   background-size:cover;
   background-position:center;
 }
+.banner-image-contact {
+  height:800px;
+  background-image:url("../images/contactbanner.png");
+  background-size:cover;
+  background-position:center;
+}
 .banner-image-activities {
   height:800px;
-  background-image:url("https://images.pexels.com/photos/419293/pexels-photo-419293.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-image:url("../images/activities-banner.png");
   background-size:cover;
   background-position:center;
 }
@@ -237,10 +281,18 @@ h5 {
   padding:10px;
   margin-top:5vw;
 }
+#myTopnav a:hover {
+  background-color:white;
+  color:black;
+  opacity:0.9;
+}
 
 @media screen and (max-width: 684px) {
    #logo {
     display:none;
+   }
+   .header-activities {
+     font-size:32px !important;
    }
   }
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -252,12 +304,17 @@ h5 {
   .banner-image {
     height:400px;
   }
+  .banner-image-contact {
+    height:400px;
+  }
+  .banner-image-activities {
+    height:400px;
+  }
     .location-mobile-footer {
     float:none;
     text-align:center !important; 
   }
 }
-
 @media screen and (max-width: 600px) {
   #popup-text {
     font-size:14px;
@@ -428,17 +485,20 @@ h5 {
   display: none;
   border:none;
 }
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
- .hvr-icon-back, .hvr-icon-forward {
-  display:none;
- }
+.ajs-close {
+  float:right;
 }
+
+
+
+@media screen and (max-width: 650px) {
+
+  .col-icon {
+    width:100%;
+    margin-bottom:50px;
+  }
+}
+
 
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
@@ -452,6 +512,14 @@ h5 {
     display: block;
     text-align: left;
   }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+ .hvr-icon-back, .hvr-icon-forward {
+  display:none;
+ }
 }
 
 /* BUTTON WITH WOBBLE */
