--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -112,7 +112,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 }
 
 .jumbotron {
-  background:url("../img/test.png");
+ /* background:url("../img/test.png");*/
   background-color:white;
   background-size:contain no-repeat;
   background-position:center;
